--- a/src/index.template.html
+++ b/src/index.template.html
@@ -5,46 +5,18 @@
   <meta charset="UTF-8">
   <title>CodePen - canvas detect collision over</title>
   <link rel="stylesheet" href="./style.css">
-
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://cdn.jsdelivr.net/npm/handtrackjs/dist/handtrack.min.js"> </script>
 </head>
 
 <body>
   <!-- partial:index.partial.html -->
-  <!DOCTYPE html>
-  <html lang="en">
 
-  <head>
-
-    <meta charset="UTF-8">
-    <title>Handtrack.js : A library for prototyping realtime handtracking in the browser. </title>
-    <link rel="stylesheet" href="https://unpkg.com/carbon-components@latest/css/carbon-components.css" />
-  </head>
-
-  <body class="">
-    <div id="tracking-container">
-
-      <div class="tracking-video">
-        <video class="videobox canvasbox" autoplay="autoplay" id="myvideo"></video>
-        <canvas id="canvas" class="border canvasbox"></canvas>
-
-        <div class="tracking-controls">
-          <div id="updatenote" class="updatenote mt10"> loading model ..</div>
-          <button onclick="toggleVideo()" id="trackbutton" class="bx--btn bx--btn--secondary" type="button">
-            Toggle Video
-          </button>
-
-        </div>
-      </div>
-
-    </div>
-
-    <canvas id="canvas-pixi"></canvas>
-    <script src="https://unpkg.com/carbon-components@latest/scripts/carbon-components.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/handtrackjs/dist/handtrack.min.js"> </script>
-  </body>
-
-  </html>
   <!-- partial -->
+  
   <script src="./script.js"></script>
 
 </body>
