Added Version Deployment

--- a/src/index.partial.html
+++ b/src/index.partial.html
@@ -21,7 +21,9 @@
 <!-- <script src="https://cdn.jsdelivr.net/gh/EdSpurrier/facetracking@v1.0/src/gameEngine.js"></script> -->
 
 <script src="userInterface.js"></script>
-<!-- <script src="motionTracker.js"></script> -->
+<script src="motionTrackerPoint.js"></script>
+<script src="trackingEngine.js"></script>
+<script src="motionTracker.js"></script>
 <!-- <script src="gameObject.js"></script> -->
 <script src="trackingPoint.js"></script>
 <script src="targetPoint.js"></script>
