--- a/src/index.partial.html
+++ b/src/index.partial.html
@@ -1,4 +1,4 @@
-<div class="layer layer-top">
+<div class="layer layer-middle">
   <div id="tracking-container">
     <video class="videobox canvasbox" autoplay="autoplay" id="webcam-video"></video>
     <canvas id="canvas" class="canvasbox"></canvas>
@@ -12,19 +12,30 @@
 </div>
 
 
-<div class="layer layer-middle">
-  layer-middle
+<div 
+  id="system" 
+  class="layer layer-top flex flex-col justify-center items-center w-full h-full bg-gray-900 bg-opacity-50"
+>
+  
 </div>
 
 <canvas id="game-canvas" class="layer layer-bottom"></canvas>
 
-<!-- <script src="https://cdn.jsdelivr.net/gh/EdSpurrier/facetracking@v1.0/src/gameEngine.js"></script> -->
+<!-- <script src="https://cdn.jsdelivr.net/gh/EdSpurrier/facetracking/src/gameEngine.js"></script> -->
+
+
+<script src="systemEngine.js"></script>
+<script src="teacherEngine.js"></script>
 
 <script src="userInterface.js"></script>
-<script src="motionTrackerPoint.js"></script>
+<!-- <script src="motionTrackerPoint.js"></script>
 <script src="trackingEngine.js"></script>
-<script src="motionTracker.js"></script>
+<script src="motionTracker.js"></script> -->
 <!-- <script src="gameObject.js"></script> -->
 <script src="trackingPoint.js"></script>
 <script src="targetPoint.js"></script>
 <script src="gameEngine.js"></script>
+
+<!-- <script src="loadFrame.js"></script> -->
+
+<!-- <script src="https://cdn.jsdelivr.net/gh/EdSpurrier/facetracking/src/gameEngine.js"></script> -->
