Changing structure and adding lessons and checks as I go

--- a/src/index.partial.html
+++ b/src/index.partial.html
@@ -12,12 +12,10 @@
 </div>
 
 
-<div 
+<!-- <div 
   id="system" 
   class="layer layer-top flex flex-col justify-center items-center w-full h-full bg-gray-900 bg-opacity-50"
->
-  
-</div>
+></div> -->
 
 <canvas id="game-canvas" class="layer layer-bottom"></canvas>
 
@@ -32,8 +30,8 @@
 <script src="trackingEngine.js"></script>
 <script src="motionTracker.js"></script> -->
 <!-- <script src="gameObject.js"></script> -->
-<script src="trackingPoint.js"></script>
-<script src="targetPoint.js"></script>
+<script src="motionTracker.js"></script>
+<script src="triggerZone.js"></script>
 <script src="gameEngine.js"></script>
 
 <!-- <script src="loadFrame.js"></script> -->
