Adding new structure and cleaning up

--- a/src/index.partial.html
+++ b/src/index.partial.html
@@ -27,10 +27,7 @@
 
       <!-- START - SYSTEM -->
         <div id="system" class="layer pointer-events-none">
-          
-
-          
-          <div id="error-console" class="layer hidden flex flex-col justify-center items-center">
+          <div id="error-console" class="layer hidden flex flex-col justify-center items-center bg-black bg-opacity-80">
             <div id="error-window" class="bg-red-900 rounded-lg overflow-hidden flex flex-col pointer-events-auto">
               <div id="error-title" class="text-xl bg-red-600 p-4">Error</div>
               <div id="error-content" class="p-8 flex flex-col gap-4">
@@ -112,9 +109,12 @@
   <script src="handtrack.min.js"></script>
   <script src="animations.js"></script>
   <script src="domEngine.js"></script>
-  <script src="teacherEngine.js"></script>
+  <script src="TeacherEngine.js"></script>
   <script src="course.js"></script>
-  <script src="errorEngine.js"></script>
+  <script src="ErrorEngine.js"></script>
+  <script src="MotionTracker.js"></script>
+  <script src="TriggerZone.js"></script>
+  <script src="SceneEngine.js"></script>
   <script src="Scene.js"></script>
   <script src="Screen.js"></script>
   <script src="timeline.js"></script>
