Timeline bugs fixed and scene and sceneEngine added

--- a/src/index.partial.html
+++ b/src/index.partial.html
@@ -85,8 +85,8 @@
       <!-- START - APP -->
         <div id="runtime" class="layer">
           
-          <div id="screen" class="layer hidden flex flex-col justify-center items-center">
-            <div id="screen-container" class="text-center flex flex-col justify-center items-center gap-8 p-8 rounded-lg w-1/4">
+          <div id="screen" class="layer hidden flex flex-col justify-center items-center p-6">
+            <div id="screen-container" class="text-center flex max-w-xl w-full flex-col justify-center items-center gap-8 p-8 rounded-lg">
               <div id="screen-title" class="text-center text-xl font-bold"></div>
               <div id="screen-content" class="text-center text-md"></div>
               <button id="screen-button" class="text-center mt-10 py-3 px-6 rounded-md self-center mt-8 text-sm cursor-pointer hover:opacity-75 duration-500"></button>
