Adding clean up and restructure

--- a/src/index.partial.html
+++ b/src/index.partial.html
@@ -111,6 +111,7 @@
 
 
 <!-- START OF trackerEngine.js RELEASE -->
+  <script src="Framework/00_htmlInjector.js"></script>
   <script src="Framework/01_handtrack.min.js"></script>
   <script src="Framework/02_Animations.js"></script>
   <script src="Framework/03_DomEngine.js"></script>
