--- a/src/index.partial.html
+++ b/src/index.partial.html
@@ -1,9 +1,9 @@
 
 <!-- START OF CODE-PEN -->
-  <div id="app">
+<!--   <div id="app">
 
 
-  </div>
+  </div> -->
 <!-- END OF CODE-PEN  -->
 
 
@@ -11,7 +11,6 @@
 
 <!-- START OF trackerEngine.js RELEASE -->
   <script src="Framework/00_htmlInjector.js"></script>
-  <script src="Framework/01_handtrack.min.js"></script>
   <script src="Framework/02_Animations.js"></script>
   <script src="Framework/03_DomEngine.js"></script>
   <script src="Framework/04_TeacherEngine.js"></script>
