--- a/src/index.template.html
+++ b/src/index.template.html
@@ -11,11 +11,11 @@
   
     <!-- START - ADD TO LOADING - ON LIVE -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
-    integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/showdown/dist/showdown.min.js"></script>
       <script src="https://cdn.jsdelivr.net/npm/animejs@3.2.1/lib/anime.min.js"></script>
+      <script src="https://cdn.jsdelivr.net/npm/handtrackjs@latest/dist/handtrack.min.js"></script>
     <!-- END - ADD TO LOADING - ON LIVE -->
 
   <!-- START - REMOVE THIS - ON LIVE -->
